<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@color/white">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutWishName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cursorColor="@color/black"
        app:boxStrokeColor="@color/black"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextWishName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wishes_name"
            android:inputType="text"
            android:padding="8dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutWishPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cursorColor="@color/black"
        app:boxStrokeColor="@color/black"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black"
        android:hint="@string/wishes_price"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutWishName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextWishPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:padding="8dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonSelectPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_photo"
        android:backgroundTint="@color/pink_light"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutWishPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/imageViewWishPhoto"
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/wishes_photo"
        android:background="@color/gray_light"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/buttonSelectPhoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/buttonSaveWish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:backgroundTint="@color/pink_light"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/imageViewWishPhoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>